<resources>
    <string name="app_name">Fallout 4 Terminal Solver</string>

    <!-- Main Activity Related Strings -->
    <string name="main_activity_title_text">@string/app_name</string>
    <string name="main_activity_start_button_text">Start</string>
    <string name="main_activity_stats_button_text">Stats</string>
    <string name="main_activity_about_button_text">About</string>

    <!-- Input Words Activity Related Strings -->
    <string name="input_words_activity_title_text">Input Terminal Words</string>

    <!-- Word Elimination Activity Related Strings -->
    <string name="word_elimination_activity_title_text">Word Elimination</string>
    <string name="word_elimination_activity_sub_title_text">Tap on items below</string>

    <!-- Statistics Activity Related Strings -->
    <string name="stats_activity_header_aggregate">Total Amount</string>
    <string name="stats_activity_header_best_scores">Best Scores</string>
    <string name="stats_activity_header_difficulty">Terminal Difficulty</string>
    <string name="stats_activity_title_text">Statistics</string>

    <!-- Button Text -->
    <string name="button_text_back">Back</string>
    <string name="button_text_add">Add</string>
    <string name="button_text_next">Next</string>
    <string name="button_text_undo">Undo</string>
    <string name="button_text_restart">Restart</string>

    <!-- Hints -->
    <string name="input_row_edit_text_hint"><small><i>Enter Word</i></small></string>

    <!-- Alert Dialog -->
    <string name="alert_input_back_title_text">Go back?</string>
    <string name="alert_restart_title_text">Restart the Solver?</string>
    <string name="alert_input_back_content_text">Are you sure you want to go back? All current data will be lost.</string>
    <string name="alert_restart_content_text">Are you sure you want to restart the solver? You can\'t undo this.</string>
    <string name="alert_elimination_back_content_text">Are you sure you want to go back to word input? Progress on this screen will be lost.</string>
    <string name="alert_input_yes">Yes</string>
    <string name="alert_input_no">No</string>
    <string name="alert_done">Done</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_solver_finished_title_text">Finished</string>
    <string name="alert_solver_finished_restart">Restart</string>
    <string name="alert_solver_finished_home">home</string>
    <string name="alert_solver_finished_input">Input</string>
    <string name="alert_solver_finished_solved_text">Solver has found the word! It\'s %1$s</string>
    <string name="alert_solver_finished_not_solved_text">The solver was unable to find the terminal password. Choose an option below to continue.</string>

    <!-- Intent Strings -->
    <string name="INTENT_KEY_INPUT_ITEMS">INPUT_ITEMS</string>

    <!-- Toast Strings -->
    <string name="toast_solver_restarted">The solver has been reset.</string>

    <!-- Stats Strings -->
    <string name="shared_pref_file_name">com.zainhumayun.fallout4terminalsolver.stats</string>
    <string name="stats_terminals_eliminated_name">Terminals Hacked</string>
    <string name="stats_words_eliminated">Words Eliminated</string>
    <string name="stats_least_guesses">Least Guesses</string>
    <string name="stats_longest_word">Longest Word Matched</string>
    <string name="stats_solved_amount_novice">Novice Solved</string>
    <string name="stats_solved_amount_advanced">Advanced Solved</string>
    <string name="stats_solved_amount_expert">Expert Solved</string>
    <string name="stats_solved_amount_master">Master Solved</string>
    <string name="stats_solved_amount_unknown">Unknown Solved</string>

    <!-- App shortcut strings -->
    <string name="shortcut_start_new_short_label">Solve Terminal</string>
    <string name="shortcut_start_new_long_label">Solve Terminal</string>
    <string name="shortcut_start_new_disabled">Unable to launch Solve Terminal shortcut</string>
    <string name="shortcut_stats_short_label">View Stats</string>
    <string name="shortcut_stats_long_label">View Stats</string>
    <string name="shortcut_stats_disabled">Unable to launch View Stats shortcut</string>

    <!-- About Strings -->
    <string name="about_activity_title">About</string>
    <string name="about_heading_features">Features</string>
    <string name="about_features_content">
        <ul>
            <li>Solve Terminals with by just tapping on words.\n</li>
            <li>Undo lets you correct mistakes without restarting.\n</li>
            <li>Restart the solver if you need to.\n</li>
            <li>Stat tracking.\n</li>
            <li>On devices with Android 7.1, use built in app shortcuts to view stats or solve a terminal.\n</li>
        </ul>
    </string>

    <string name="about_heading_how_it_works">How to Use</string>
    <string name="about_how_it_works_content">
        <ol>
            <li>Click start and start typing the words into the input boxes. You can press done on the soft keybaord to quickly add new words.\n\n</li>
            <li>After all words have been given, tap next to proceed to the elimination screen. Make sure all the words are uppercase.\n\n</li>
            <li>Tap on the yellow words apply them as a filter. Give in the likeness that the terminal in Fallout 4 has given you for that word.\n\n</li>
            <li>Repeat until the solver is done. Green words are applied filters (words selected in the Terminal). Grey words are ones that are eliminated and cannot be the terminal password.\n\n</li>
        </ol>
    </string>

    <string name="about_heading_credits">Credit</string>
    <string name="about_credit_content">This application was entirely created by Zain Humayun and is open sourced GitHub.</string>
</resources>
